<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactile_adaptive_grasp</name>
  <version>1.0.0</version>
  <description>python package for adaptive gripper</description>
  <maintainer email="2536890272@qq.com">CarlDegio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>bye140_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
